# arm_camera_calibration

./: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml  package.xml
data/: calbration_path.yaml  calbration_path_2.yaml  calibration_path.yaml
launch/: calibration.launch  stereo_points.launch
octave/: arm_poses.txt  calib_log  calibrate  calibrate.m  check_calibration.m  compare_poses.m  extrinsic_calibration.m  handEye.m  handEye2.m  pattern_poses.txt  randtrans.m  read_transformations.m  robot_rot.m  test_arm_poses.txt  test_handEye.m
src/: arm_camera_calibration.cpp
